--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        
+        <div id="startPage">
+            <h2>Movie Quiz!</h2>
+            <button id="startBtn">Start Quiz</button>
+            <button id="startPageHighScore" onclick="showHighScore()">View High Scores</button>
+        </div>
+
+        <div id="quiz">
+            <div id="timer">Time left: </div>
+                <div id="questions"><p>Questions Placeholder</p></div>
+                    <button id="a" onclick="checkAnswer('a')">A</button>
+                    <button id="b" onclick="checkAnswer('b')">B</button>
+                    <button id="c" onclick="checkAnswer('c')">C</button>
+                    <button id="d" onclick="checkAnswer('d')">D</button>
+                <div id="result"></div>
+        </div>
+
+    </div>
+
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
