--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
                 <div id="result"></div>
         </div>
 
+        <div id="gameover">
+            <div id="finalScore"></div>
+            <input type="text" size="40" placeholder="Enter your name for the Leaderboard!" name="name" id="name" />
+            <button id="submitScore">Submit Score</button>
+        </div>
+
+        <div id="highscoreContainer">
+            <div id="high-scorePage">
+                <div id="highscore-header">
+                    <h3>User Name</h3>
+                    <h3>Score</h3>
+                </div>
+                <div id="highscore-name"></div>
+                <div id="highscore-score"></div>
+            </div>
+        </div>
+
     </div>
 
     <script src="./assets/js/script.js"></script>
